tests/solidity-semantic-tests/out/errors/require_error_condition_evaluated_only_once/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_condition_evaluated_only_once.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0 32
    bytecblock "counter"
    pushint 4096
    bzero
    dup
    store 5
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn ApplicationID
    bnz main_after_if_else@2
    intc_1 // 0
    itob
    bytec_0 // "counter"
    swap
    app_global_put
    intc_0 // 1
    return

main_after_if_else@2:
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x61cb7650 0x74c48465 // method "getCounter()uint256", method "f(bool)void"
    txna ApplicationArgs 0
    match getCounter f
    err


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_condition_evaluated_only_once.sol.C.getCounter[routing]() -> void:
getCounter:
    txn GroupIndex
    bz getCounter_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

getCounter_ternary_merge@4:
    !
    assert // not payable
    intc_1 // 0
    bytec_0 // "counter"
    app_global_get_ex
    assert // check counter exists
    dup
    len
    intc_2 // 32
    <=
    assert // overflow
    intc_2 // 32
    bzero
    b|
    pushbytes 0x151f7c75
    swap
    concat
    log
    intc_0 // 1
    return

getCounter_ternary_false@3:
    intc_1 // 0
    b getCounter_ternary_merge@4


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_condition_evaluated_only_once.sol.C.f[routing]() -> void:
f:
    txna ApplicationArgs 1
    dup
    len
    intc_0 // 1
    ==
    assert // invalid number of bytes for arc4.bool
    intc_1 // 0
    getbit
    txn GroupIndex
    bz f_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

f_ternary_merge@4:
    !
    assert // not payable
    dupn 2
    intc_0 // 1
    <=
    assert // ABI bool validation
    intc_1 // 0
    bytec_0 // "counter"
    app_global_get_ex
    assert // check counter exists
    pushbytes 0x01
    b+
    bytec_0 // "counter"
    swap
    app_global_put
    assert // CustomError
    intc_0 // 1
    return

f_ternary_false@3:
    intc_1 // 0
    b f_ternary_merge@4
